# realbugtracker

./: CMakeLists.txt  LICENSE  README.md
examples/: downloadExample.sh
include/: ttoolbox.h
src/: extractcenterpoints.cpp  mergetimeline.cpp  producetrajectory.cpp  test.cpp  ttoolbox.cpp
